css/product-detail.css
.slider.product_detail_slider {
    padding: 3rem;
}

.rp_product_detail_box {
    max-height: 28rem;
    min-width: 26rem;
    height: 100%;
    display: flex;
    position: relative;
}

.rp_product_detail_box:before {
    content: '';
    position: absolute;
    bottom: 2.5rem;
    left: 0;
    right: 0;
    height: 12px;
    background-color: #faba15;
    z-index: 1;
}

.rp_product_detail_box:after {
    content: '';
    position: absolute;
    bottom: 2.9rem;
    left: 0;
    right: 0;
    -webkit-box-shadow: 0 8px 6px 0 #000000;
    -moz-box-shadow: 0 8px 6px 0 #000000;
    box-shadow: 0 8px 6px 0 #000000;
    height: 2px;
    z-index: 0;
}

.rp_product_detail_box .rp_card {
    position: relative;
    height: 24rem;
    z-index: 4;
}

.rp_product_detail_box .rp_card--media {
    position: relative;
    height: 100%;
    align-items: flex-end;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center center;
    display: flex;
    align-items: flex-end;
    padding: 1rem;
}

.rp_product_detail_box .rp_card--media .dot {
    position: absolute;
    height: 1.5rem;
    width: 1.5rem;
    background-color: #faba15;
    border-radius: 50%;
    opacity: 0;
    opacity: 0;
    -webkit-transition: all 200ms ease-in;
    -webkit-transform: scale(0);
    -ms-transition: all 200ms ease-in;
    -ms-transform: scale(0);
    -moz-transition: all 200ms ease-in;
    -moz-transform: scale(0);
    transition: all 200ms ease-in;
    transform: scale(0);
    transition-delay: 0s;
}

.rp_product_detail_box.active .rp_card--media .dot {
    opacity: 1;
    transform: scale(1);
    transition: all 250ms ease-in;
    -webkit-transform: scale(1);
    -webkit-transition: all 250ms ease-in;
    -ms-transform: scale(1);
    -moz-transition: all 250ms ease-in;
    -moz-transform: scale(1);
    transition-delay: .25s;
    /* transition-delay: .5s; */
    box-shadow: 0 2px 1px -1px rgba(0, 0, 0, .2), 0 1px 1px 0 rgba(0, 0, 0, .14), 0 1px 2px 0 rgba(0, 0, 0, .12);
    z-index: 1;
}

.rp_product_detail_box .rp_card--media .dot:hover {
    box-shadow: 0px 8px 10px -5px rgba(0, 0, 0, 0.2), 0px 16px 24px 2px rgba(0, 0, 0, 0.14), 0px 6px 30px 5px rgba(0, 0, 0, 0.12) !important;
    transition: .45s cubic-bezier(.25, .8, .5, 1);
    transition-delay: 0s;
}

.rp_product_detail_box .rp_card--media .dot[data-text]:hover:after {
    content: attr(data-text);
    position: absolute;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    min-width: 3.5rem;
    max-width: 12rem;
    min-height: 2rem;
    color: rgba(0, 0, 0, .84);
    border: 1px solid #faba15;
    border-radius: 12px;
    padding: .5rem .75rem;
    transition: .45s cubic-bezier(.25, .8, .5, 1);
}

.rp_product_detail_box .rp_card--media .dot[data-tooltip="left"]:hover:after {
    top: -.5rem;
    left: -10rem;
}

.rp_product_detail_box .rp_card--media .dot:before {
    content: '';
    width: 1rem;
    height: 1rem;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
    border: 3px solid #faba15;
    border-radius: 50%;
    animation: beacon 1.5s infinite linear;
    animation-fill-mode: forwards;
    z-index: 0;
}

.rp_product_detail_box .rp_card--media .dot:hover:before {
    animation: none;
}

.rp_product_detail_box .rp_card--media .media {
    max-height: 28rem;
    min-height: 25rem;
    max-width: 14rem;
    opacity: 1;
    transform: scale(0.4);
    transition: all 250ms ease-in;
    -webkit-transform: scale(0.4);
    -webkit-transition: all 250ms ease-in;
    -ms-transform: scale(0.4);
    -moz-transition: all 250ms ease-in;
    -moz-transform: scale(0.4);
    -webkit-transform-origin: 50% 100%;
    -moz-transform-origin: 50% 100%;
    -o-transform-origin: 50% 100%;
    -ms-transform-origin: 50% 100%;
    transform-origin: 50% 100%;
    overflow: hidden;
    position: absolute;
}

.overflow_x_container .overflow_overlay {
    height: 100%;
    width: 100%;
    background-color: rgba(255, 255, 255, 0.7);
    position: absolute;
    top: 0;
    left: 0;
    opacity: 0;
    transition: .3s cubic-bezier(.25, .8, .5, 1);
    z-index: 3;
}

.overflow_x_container.float .overflow_overlay {
    bottom: 0;
    right: 0;
    opacity: 1;
}

.btn_left.disabled,
.btn_right.disabled,
.overflow_x_container.float .btn_left,
.overflow_x_container.float .btn_right {
    pointer-events: none;
    color: #d2d2d2;
}

.overflow_x_container.float .rp_product_detail_box:not(.active) {
    z-index: 2;
}

.rp_product_detail_box.wide {
    min-width: 25rem;
    min-height: 17rem;
}

.rp_product_detail_box.wide .rp_card--media .media {
    min-width: 21rem;
    min-height: 14rem;
}

/* .rp_product_detail_box.wide .rp_card--media .media {
    min-width: 52rem;
    min-height: 26rem;
}

*/

.rp_product_detail_box.active .rp_card--media .media,
.rp_product_detail_box .rp_card--media .media:hover {
    opacity: 1;
    transform: scale(1);
    transition: all 250ms ease-in;
    -webkit-transform: scale(1);
    -webkit-transition: all 250ms ease-in;
    -ms-transform: scale(1);
    -moz-transition: all 250ms ease-in;
    -moz-transform: scale(1);
    transition-delay: 0;
}

.slider .empty_placeholder {
    min-width: 50vw;
    width: 50vw;
    height: 100%;
}

.rp_product_description_box {
    position: absolute;
    bottom: 0;
    display: flex;
    justify-content: space-around;
    width: 100%;
    max-width: 72rem;
    padding: 1rem 3rem;
    background: #fff;
    height: 12rem;
    box-shadow: 0px 3px 3px -2px rgba(0, 0, 0, 0.2), 0px 3px 4px 0px rgba(0, 0, 0, 0.14), 0px 1px 8px 0px rgba(0, 0, 0, 0.12) !important;
    transition: height 1s ease-in-out;
    transition-delay: .5s;
    z-index: 3;
    flex-direction: column;
    position: absolute;
    bottom: -9rem;
    width: 100%;
}

.rp_product_description_box .product_title,
.rp_product_description_box .product_price {
    display: flex;
    font-weight: 300;
    font-size: 1.4rem;
    align-items: flex-start;
}

.rp_product_description_box .product_title {
    justify-content: flex-start;
    width: 12.5rem;
}

.rp_product_description_box .product_price {
    justify-content: flex-end;
    width: 12.5rem;
    width: 8rem;
}

.rp_product_description_box img {
    /* transform: scale(0);
    transition: transform .4s cubic-bezier(.5, 0, .3, 1);
    max-height: 15rem;
    transition-delay: .5s; */
}

.overflow_x_container.float .rp_product_description_box .product_title {
    opacity: 0;
    transition-delay: .25s;
    transition: .4s cubic-bezier(.5, 0, .3, 1);
}

.overflow_x_container.float .rp_product_description_box {
    height: 34rem;
}

/* 
.overflow_x_container.float .rp_product_description_box img {
    transform: scale(1);
} */

.overflow_x_container.float .rp_product_detail_box.active.wide .media {
    /* position: fixed;
    left: 18rem;
    top: 10rem;
    /* -webkit-transition: all 1s ease-out; */
    /* opacity: 0; */
    transform: translateX(-25rem);
    transition-delay: 0;
    transition: all 1s ease;
    z-index: 4;
}

.overflow_x_container.float .rp_product_detail_box.active.wide .media {
    transform: translateX(-40rem);
    transition-delay: 0;
}

.overflow_x_container.float .rp_card--media .dot {
    animation-delay: 0;
    transition-delay: 0;
    opacity: 0;
}

.overflow_x_container.float .rp_product_description_box .rp_product_spec_box {
    opacity: 1;
    transform: scaleY(1);
    transition: all 250ms ease-in;
    -webkit-transform: scaleY(1);
    -webkit-transition: all 250ms ease-in;
    -ms-transform: scaleY(1);
    -moz-transition: all 250ms ease-in;
    -moz-transform: scaleY(1);
    transition-delay: 1.25s;
}

.overflow_x_container.float .more_button {
    -webkit-transform: rotate(180deg);
    -moz-transform: rotate(180deg);
    -o-transform: rotate(180deg);
    -ms-transform: rotate(180deg);
    transform: rotate(180deg);
    transition-delay: .5s;
    transition-duration: .5s;
}

.rp_product_spec_box {
    opacity: 0;
    display: flex;
    justify-content: center;
    transition: .3s cubic-bezier(.25, .8, .5, 1);
    padding: 1rem;
    transform: scaleY(0);
    transition: all 250ms ease-in;
    -webkit-transform: scaleY(0);
    -webkit-transition: all 250ms ease-in;
    -ms-transform: scaleY(0);
    -moz-transition: all 250ms ease-in;
    -moz-transform: scaleY(0);
}

.rp_product_description_box .combo_box {
    display: flex;
    justify-content: center;
    min-height: 2.8rem;
    align-items: center;
}

.rp_product_description_box .combo_item {
    border: .1rem solid #faba15;
    border-radius: 12px;
    height: 3rem;
    width: 3rem;
    margin-right: 1.25rem;
    padding: 0.25rem;
    cursor: pointer;
    position: relative;
}

.rp_product_description_box .combo_item:hover:before {
    content: '';
    background: #faba15;
    opacity: .05;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
}

.rp_product_description_box .combo_item:focus:before,
.rp_product_description_box .combo_item:active:before {
    content: '';
    background: #faba15;
    opacity: .1;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
}

.combo_item img {
    height: 100%;
    width: 100%;
}

.more_button {
    margin-top: -0.2rem;
    margin-left: 1rem;
}

.spec_detail {
    padding: 0.5rem 0;
}

.spec_detail>div {
    line-height: 1.5;
    font-size: 0.9rem;
}

.spec_detail b {
    font-size: 1.05rem;
    font-weight: 700;
}

.review_box {
    display: flex;
    width: 20rem;
    flex-direction: column;
    height: 8rem;
    border: 2px solid #eee;
    padding: 1rem;
    border-radius: 12px;
}

.review_title {
    display: flex;
    align-items: center;
    margin-bottom: 1rem;
    position: relative;
}

.review_title:after {
    content: '';
    height: 1px;
    width: 100%;
    background-color: rgba(0, 0, 0, .12);
    content: '';
    height: 1px;
    width: 100%;
    background-color: rgba(0, 0, 0, .12);
    position: absolute;
    left: 0;
    bottom: -0.5rem;
}

.review_title .user_icon {
    height: 2.5rem;
    width: 2.5rem;
    display: flex;
    border: 2px solid #faba15;
    border-radius: 50%;
    padding: 0.25rem;
    justify-content: center;
    align-items: center;
    background-color: #f5f5f5;
}

.review_title .user_icon img {
    height: 1.5em;
    width: 1.5rem;
}

.review_title .review_title_info {
    padding-left: .75rem;
    align-items: center;
}

.review_title .username {
    line-height: 1.5;
}

.review_title .time {
    font-weight: 300;
    font-size: 0.75rem;
}

.option_box {
    display: flex;
    padding: 1rem;
}

.option_box .option_title {
    width: 10rem;
}

.option_box .option_item {
    background-color: #eee;
    color: #757575;
    border: 1px solid #ddd;
    padding: .5rem 1rem;
    font-size: 0.9rem;
    border-radius: 12px;
    margin-right: 1rem;
    position: relative;
    overflow: hidden;
}

.option_box .option_item:hover {
    background-color: #fff;
}

.option_box .option_item:hover:after {
    content: '';
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    background-color: #faba15;
    opacity: .2;
}

.option_box .option_detail {
    display: flex;
}

.option_box .option_item.active {
    border-color: #faba15;
}

